<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicalAttendant</string>
    <string name="medical_attendant">Medical Attendant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ddcu">Distant Diagnosis Check Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="info2">Info2</string>
    <string name="info3">Info3</string>
    <string name="info4">Info4</string>
    <string name="distant_diagnosis">DistantDiagnosis</string>
    <string name="check_up">Check-Up</string>
    <string name="find_doctor">Find Doctors</string>
    <string name="symptoms">Symptoms</string>
    <string name="add_picture">Add Picture</string>
    <string name="add_voice_record">Add Voice Record</string>
    <string name="use_medical_device">Use Medical Device</string>
    <string name="doctor1">Doctor1</string>
    <string name="doctor2">Doctor2</string>
    <string name="doctor3">Doctor3</string>
    <string name="doctor4">Doctor4</string>
    <string name="submit">Submit</string>
    <string name="title_activity_find_doctors">FindDoctorsActivity</string>
    <string name="title_activity_check_up">CheckUpActivity</string>
    <string name="title_activity_examination">ExaminationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="description_start">This is image of main icon of our app</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="medication_to_take">Medication To Take</string>
    <string name="list_of_medical_examination">List of Medical Examination</string>
    <string name="title_activity_distant_diagnosis">DistantDiagnosisActivity</string>
    <string name="title_activity_doctor_menu">DoctorMenuActivity</string>
    <string name="distant_diagnosis_report">Distant Diagnosis Received</string>
    <string name="patient_summary">Patient Summary</string>
    <string name="title_activity_doctor_dist">DoctorDistActivity</string>
    <string name="title_activity_patients">PatientsActivity</string>
    <string name="title_activity_patient_summ">PatientSummActivity</string>
    <string name="title_activity_create_check_up">CreateCheckUpActivity</string>
    <string name="zip">ZipCode</string>
    <string name="job">Job</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="title_service_remote_client">Remote Client Service</string>
    <string name="logout">Logout</string>
    <string name="title_activity_voice_record">VoiceRecordActivity</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="done">Done</string>
    <string name="title_activity_dist_summ">DistSummActivity</string>
    <string name="pic_view">Picture</string>
    <string name="voc_view">Start Playing</string>
    <string name="create_checkups">Create Check Up</string>
    <string name="suggested_medication"> Suggested Medication to take</string>
    <string name="medication_history"> History of medication dosage</string>
    <string name="exam_result">Examinatin Result</string>

</resources>