<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.MainMenuActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/distant_diagnosis_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/distant_diagnosis" />

    <Button
        android:id="@+id/check_up_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/distant_diagnosis_btn"
        android:layout_below="@+id/distant_diagnosis_btn"
        android:text="@string/check_up" />

    <Button
        android:id="@+id/find_doctor_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/check_up_btn"
        android:layout_below="@+id/check_up_btn"
        android:text="@string/find_doctor" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/find_doctor_btn"
        android:layout_below="@+id/find_doctor_btn"
        android:text="@string/logout" />

</RelativeLayout>
