<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.VoiceRecordActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/record_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_above="@+id/play_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/record" />

    <Button
        android:id="@+id/done_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/play_btn"
        android:layout_below="@+id/play_btn"
        android:text="@string/done" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/record_btn"
        android:layout_centerVertical="true"
        android:text="@string/play" />

</RelativeLayout>
