<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.DistantDiagnosisActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/body_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/body_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/symptoms_edit"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:ems="10"
                android:gravity="top"
                android:inputType="text"
                android:text="@string/symptoms" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <RelativeLayout
                android:id="@+id/btns_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/symptoms_edit" >

                <Button
                    android:id="@+id/picture_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_picture" />

                <Button
                    android:id="@+id/voice_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/picture_btn"
                    android:layout_below="@+id/picture_btn"
                    android:text="@string/add_voice_record" />

                <Button
                    android:id="@+id/medical_device_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/voice_btn"
                    android:layout_below="@+id/voice_btn"
                    android:text="@string/use_medical_device" />
            </RelativeLayout>

            <ListView
                android:id="@+id/doctors_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btns_layout" >
            </ListView>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctors_layout"
                android:layout_centerHorizontal="true"
                android:text="@string/submit" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>